@@ -71,6 +71,11 @@
 			<label index="warning.oldStyleWorkspaceInUser">It seems that you're still using old-style workspace. Please use the update scripts in the TYPO3 Install Tool to run the necessary updates. If you continue using this module without migrating your workspace you might loose data.</label>
 			<label index="info.newpage">New Page!</label>
 			<label index="info.newpage.detail">The previewed page has been created in a workspace and has no live counterpart.</label>
+			<label index="preview.visualPreview">Visual preview</label>
+			<label index="preview.listView">List view</label>
+			<label index="preview.helpView">Help</label>
+			<label index="preview.livePreview">Live</label>
+			<label index="preview.workspacePreview">Workspace</label>
 		</languageKey>
 	</data>
 </T3locallang>
