@@ -1,0 +1,6 @@
+<script type="text/javascript">
+	document.domain =  '{backendDomain}';
+
+	// @todo redirect to split module if this is opened standalone
+	 parent.resize(document.height);
+</script>
